Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-171
shell doesn't support replica pairs
Undo Transition
Closed
null
Export
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
0.9.8
Affects Version/s:
None
Component/s:
Replication
,
Shell
Labels:
None
Field Tab
Aha! Info
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Attachments
Activity
People
Assignee:
Eliot Horowitz (Inactive)
Reporter:
Dwight Merriman
Participants:
Dwight Merriman
,
Eliot Horowitz
Votes
:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
Jul 20 2009 05:55:02 PM UTC
Updated:
Jul 12 2016 12:29:03 AM UTC
Resolved:
Aug 10 2009 02:01:23 PM UTC
PagerDuty