implement paired connection support in shell SERVER-171